--- a/openlibrary/src/App.scss
+++ b/openlibrary/src/App.scss
@@ -1,138 +1,43 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.center {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  text-align: center;
-  color: #0d0d0e;
-}
-
-input[type = "text"] {
-  width: 300px;
-  padding: 10px;
-  font-size: 16px;
-
-}
-
-
-
+@use '@carbon/react';
+@use '@carbon/react/scss/spacing' as *;
 
 .App {
-  text-align: center;
-  font-family: Arial, sans-serif;
+  text-align: left;
+  margin-top: 15px;
+  margin-bottom: 20px;
+  padding: $spacing-04; 
 }
 
-h1 {
-  color: #333;
+.SearchBar {
+  display: flex;
+  justify-content: flex-start; 
+  margin-bottom: $spacing-04; 
 }
 
-h2 {
-  color: #666;
+.SearchBar_ {
+  margin-right: $spacing-02; 
 }
 
-.SearchBox {
-  margin-top: 20px;
+.SearchBar__button {
+  margin-left: $spacing-01; 
+  color: #110f0f;
 }
 
-.search-input {
-  padding: 8px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+.SearchButton {
+  font-weight: bold;
 }
 
-.search-button {
-  margin-left: 10px;
-  padding: 8px 16px;
-  font-size: 16px;
-  background-color: #0074d9;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.Output {
-  margin-top: 20px;
+.SearchBar__list {
+  margin-top: $spacing-04; 
 }
 
 .book-item {
-  margin: 10px 0;
-  margin-bottom: 10px;
-}
-
-.book-link {
-  font-weight: bold;
-  text-decoration: none;
-  color: #0074d9;
-}
-
-.book-author {
-  color: #777;
-  margin-left: 5px;
-}
-
-.book-year {
-  color: #777;
-  margin-left: 5px;
+  margin-bottom: $spacing-02;
+  padding: $spacing-05;
+  border: 1px solid #030202; 
 }
 
 .no-books {
-  color: #d9534f;
-}
-
-.loading {
-  color: #337ab7;
-}
-
-.error {
-  color: #d9534f;
-}
-
-.book-item {
-  margin-bottom: 10px; /* Adjust the value as needed to control the space between items */
-}
-
-.book-separator {
-  margin: 5px 0; /* Adjust the top and bottom margin to control the space between the separator and items */
+  margin-bottom: $spacing-02;
+  padding: $spacing-02;
 }
