Color of the border changed

--- a/openlibrary/src/App.scss
+++ b/openlibrary/src/App.scss
@@ -34,7 +34,7 @@
 .book-item {
   margin-bottom: $spacing-02;
   padding: $spacing-05;
-  border: 1px solid #030202; 
+  border: 1px solid #efe8e8; 
 }
 
 .no-books {
