Added Spacing for App and BookDetail page Implemented code, to remove unnecessary information while rendering subject and description using regular expression Changed some styling in both App and BookDetail page

--- a/openlibrary/src/BookDetail.scss
+++ b/openlibrary/src/BookDetail.scss
@@ -7,11 +7,19 @@
 }
 
 .book-title {
-  font-size: 24px; 
+  font-size: 50px; 
+  font-style: oblique;
+  margin-top: $spacing-03;
+  margin-bottom: $spacing-02;
+  color: black;
+  font-weight: bolder;
+  margin-left: $spacing-01;
 }
 
 .book-cover {
-  padding: $spacing-05; 
+  margin: $spacing-05; 
+  margin-left: $spacing-01;
+  margin-top: $spacing-06;
 }
 
 .Subjects,
@@ -19,4 +27,19 @@
 .header {
   padding-top: $spacing-05;
   padding-bottom: $spacing-05;
+  margin-left: $spacing-02;
+  border: 1px solid rgb(253, 253, 253);
+}
+
+.BookPage__author {
+  margin-top: $spacing-02;
+  color: #403c3c; 
+  font-size:xx-small;
+}
+.book-description {
+   //can add styling
+}
+
+.book-subjects {
+ //can add some styling
 }
